# word2vec

./: .gitignore  README.md  pyproject.toml
notebook/: 01. dataset.ipynb  01_dataset.ipynb
notebook/01/: bonus_using_hf.ipynb  dataset.ipynb
