[project]
name = "word2vec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "librosa>=0.11.0",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
